--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <!-- nessa parte head é a parte do cabeçalho da pagina-->
   <head>
-    <link rel="stylesheet" href="./stely.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
